add multi pages

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -13,7 +13,18 @@
             {% endblock %}
     </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <style>
+        .pagenation .page{
+            display: inline-block;
+            padding: 5px;
+            background-color: white;
+            margin:5px ;
+        }
+        .pagenation .page.active{
+            background-color: blue;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <!--don't move -->
