--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -11,7 +11,7 @@
 
 {% block body_block %}
     {% if category %}
-    <h1>{{ category.name }}</h1>
+    <h1 id="categoryname">{{ category.name }}</h1>
     {% if pages %}
     {% for page in pages %}
         <div class="card">
