--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -13,7 +13,7 @@
             {% endblock %}
     </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/mystyle.css">
 </head>
 <body>
     <!--don't move -->
@@ -73,7 +73,14 @@
 
     {% block body_block %}
     {% endblock %}
+	
+<footer>
 
+<div class="footer">Copyright &copy;2021 RANGO &nbsp;&nbsp;&nbsp;
+	<a href="{% url 'rango:index' %}"> Rango</a>
+</div>
+
+</footer>
     <!--
     <div>
         {% block sidebar_block %}
