--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -28,6 +28,10 @@
               </div>
         </div>
     {% endfor %}
+        <div class="pagenation">
+        {{ page_str }}
+        </div>
+
     {% else %}
     <strong>No pages currently in category.</strong>
     {% endif %}<br/>
