--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -53,7 +53,9 @@ Rango says: <strong>thank you for registering!</strong>
             <input type="password" id="password" class="form-control" name="password" placeholder="please enter password"/>
             <span id="s_password" class="error"></span>
         </div>
+        <div>
         {{ profile_form.as_p }}
+        </div>
         <div class="form-group col-md-5">
             <button type="submit" class="btn btn-primary">register</button>
         </div>
