--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -12,50 +12,90 @@
     {% block scripts %}
     {% endblock %}
     <title>
-            Rango -
-            {% block title_block %}
-                How to Tango with Django!
-            {% endblock %}
+        Rango -
+        {% block title_block %}
+            How to Tango with Django!
+        {% endblock %}
     </title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <style>
-        .pagenation .page{
+        .pagenation .page {
             display: inline-block;
             padding: 5px;
             background-color: white;
-            margin:10px ;
+            margin: 10px;
         }
-        .pagenation .page.active{
+
+        .pagenation .page.active {
             background-color: blue;
             color: white;
+        }
+
+        #zan {
+            width: 75px;
+            height: 30px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            float: right;
+            margin-right: 25px;
+            background-color: #F3F3F3;
+
+            border-radius: 6px;
+            user-select: none;
+            cursor: pointer;
+        }
+
+        #zan img {
+            width: 14px;
+            height: 14px;
+            margin: 5px 5px 0 5px;
+        }
+
+        #zan #add_id_{{ page.title }} {
+            line-height: 22px;
+            margin-right: 3px;
         }
     </style>
 </head>
 <body>
 
-    <!--don't move -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <!--navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<!--don't move -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+<!--navigation bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Category
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Category
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                    {% for category in categories %}
+                        <div><b>{{ category.name }}:</b>
+                        {% for page in pages %}
+                            {% if page.category_id == category.id %}
+                                <a class="dropdown-item" href="{{ page.url }}">{{ page.title }}</a>
+                            {% endif %}
+                        {% endfor %}
+                    {% endfor %}
+                    </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'rango:index' %}">HomePage</a>
@@ -83,23 +123,24 @@
         </ul>
         <form class="form-inline my-2 my-lg-0" method="post" action="{% url 'rango:search' %}">
             {% csrf_token %}
-          <input class="form-control mr-sm-2" type="search" name="category" placeholder="Please enter a category" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="search" name="category" placeholder="Please enter a category"
+                   aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    {% block body_block %}
-    {% endblock %}
+{% block body_block %}
+{% endblock %}
 
 <footer>
 
-<div class="footer">Copyright &copy;2021 RANGO &nbsp;&nbsp;&nbsp;
-	<a href="{% url 'rango:index' %}"> Rango</a>
-</div>
+    <div class="footer">Copyright &copy;2021 RANGO &nbsp;&nbsp;&nbsp;
+        <a href="{% url 'rango:index' %}"> Rango</a>
+    </div>
 
 </footer>
-    <!--
+<!--
     <div>
         {% block sidebar_block %}
             {% get_category_list %}
@@ -109,7 +150,7 @@
     -->
 
 
-    <!--
+<!--
     <div>
         <ul>
             {% if user.is_authenticated %}
@@ -126,5 +167,16 @@
     </div>
     -->
 <script src="{% static 'js/effects.js' %}"></script>
+<script>
+    var btnObjs = document.getElementsByTagName("button");
+    for (var i = 0; i < btnObjs.length; i++) {
+        btnObjs[i].onclick = function () {
+            var num1 = document.getElementById(this.value);
+            num1.innerHTML++;
+        }
+    }
+
+
+</script>
 </body>
 </html>
