--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -126,5 +126,6 @@
     </div>
     -->
 <script src="{% static 'js/effects.js' %}"></script>
+<script src="{% static 'js/test.js' %}"></script>
 </body>
 </html>
