--- a/templates/rango/profile.html
+++ b/templates/rango/profile.html
@@ -6,21 +6,15 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css'%}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css'%}">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit:500">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700italic">
-    <link href='https://fonts.googleapis.com/css?family=Dosis:400,200,300,500,600,800,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500italic,500,700italic,700,900,900italic' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
-    <link rel="stylesheet" href="{% static 'css/theme/green.css'%}">
 
 {% endblock %}
 
 {% block body_block%}
     <section class="row featured-post-carousel">
     <div class="item post">
-       <img src="{{ MEDIA_URL }}1.jpg"  class="img-responsive main-bg"/>
+       <img src="{{ MEDIA_URL }}1.png"  class="img-responsive main-bg"/>
         <div class="post-content">
             <div class="container">
                 <h5 class="post-meta"><i>in</i><a href="#">{{ username }} Profile</a>|<a href="#">{{time}}</a></h5>
@@ -33,22 +27,23 @@
       <div class="container">
         <div class="row" id="post-masonry">
               <!--Author Widget-->
-            <aside class="col-sm-4 widget-author widget widget-with-posts post">
+            <aside class="col-sm-4 widget-author widget-with-posts post ">
                 <div class="widget-author-inner row">
-                    <div class="author-avatar row"><a href="#"><img src="images/author.png" alt="这里是头像" class="img-circle"></a></div>
-                    <a href="#"><h2 class="author-name">用户名</h2></a>
-                    <h5 class="author-title">用户签名</h5>
-                    <p> 用户介绍</p>
-                    <a href="#" class="know-more">用户网址</a>
+                    <div class="row author-avatar "><a href="#"><img  class="img-circle" src="{{ MEDIA_URL }}author.png" alt="这里是头像"></a></div>
+                    <a href="#"><h2 class="author-name">{{ username }}</h2></a>
+                    <h5 class="author-title">User sign</h5>
+                    <p> Introduction</p>
+                    <a class="know-more" href={{ website }}>know more</a>
                 </div>
                 <ul class="nav social-nav">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-facebook-official"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="#"><p>twitter</p><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><p>facebook</p><i class="fa fa-facebook-official"></i></a></li>
+                    <li><a href="#"><p>google</p><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="#"><p>instagram</p><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </aside>
+            <!--blog post-->
+            {{ page_str }}
             <!--Blog Post-->
             <article class="col-sm-4 post post-masonry post-format-image">
                 <div class="post-wrapper row">
