--- a/templates/rango/profile.html
+++ b/templates/rango/profile.html
@@ -29,7 +29,7 @@
               <!--Author Widget-->
             <aside class="col-sm-4 widget-author widget-with-posts post ">
                 <div class="widget-author-inner row">
-                    <div class="row author-avatar "><a href="#"><img  class="img-circle" src="{{ MEDIA_URL }}author.png" alt="这里是头像"></a></div>
+                    <div class="row author-avatar "><a href="#"><img  src="{{ MEDIA_URL }}author.png" alt="这里是头像" class="rounded-circle"></a></div>
                     <a href="#"><h2 class="author-name">{{ username }}</h2></a>
                     <h5 class="author-title">User sign</h5>
                     <p> Introduction</p>
