--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block title_block %}
+
     {% if category %}
         {{ category.name }}
     {% else %}
@@ -25,8 +26,8 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ page.title }}</h5>
                         <a href="{{ page.url }}" class="btn btn-primary">Go</a>
-                        <button id="zan" value="{{ page.title }}">
-                            <img src="{% static 'images/good.png' %}">
+                        <button  id="zan" value="{{ page.title }}">
+                            <img  src="{% static 'images/good.png' %}">
                             <div id="{{ page.title }}">0</div>
                         </button>
                     </div>
@@ -52,4 +53,6 @@
         </button>
     {% endif %}
 
+    <script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
+     <script src="{% static 'js/bingo.js' %}"></script>
 {% endblock %}
