--- a/templates/rango/profile.html
+++ b/templates/rango/profile.html
@@ -29,7 +29,7 @@
               <!--Author Widget-->
             <aside class="col-sm-4 widget-author widget-with-posts post ">
                 <div class="widget-author-inner row">
-                    <div class="row author-avatar "><a href="#"><img  src="{{ MEDIA_URL }}author.png" alt="这里是头像" class="rounded-circle"></a></div>
+                    <div class="row author-avatar "><a href="#"><img  src="{{ MEDIA_URL }}author.png" alt="photo" class="rounded-circle"></a></div>
                     <a href="#"><h2 class="author-name">{{ username }}</h2></a>
                     <h5 class="author-title">User sign</h5>
                     <p> Introduction</p>
@@ -48,18 +48,18 @@
             <article class="col-sm-4 post post-masonry post-format-image">
                 <div class="post-wrapper row">
                     <div class="featured-content row">
-                        <a href="single.html"><img src="{{ MEDIA_URL }}这里是page的图片“ alt=”Picture of a cat" class="img-responsive"></a>
+                        <a href="single.html"><img src="{{ MEDIA_URL }}“ alt=”Picture of a cat" class="img-responsive"></a>
                     </div>
                     <div class="post-excerpt row">
                         <h5 class="post-meta">
-                            <a href="#" class="date">这里是page创建的时间</a>
-                            <span class="post-author"><i>by</i><a href="#">这里是作者名</a></span>
+                            <a href="#" class="date">page time</a>
+                            <span class="post-author"><i>by</i><a href="#">author name</a></span>
                         </h5>
-                        <h3 class="post-title"><a href="single.html">这里是page名字</a></h3>
-                        <p>这里是page介绍</p>
+                        <h3 class="post-title"><a href="single.html">page name</a></h3>
+                        <p>page introduction</p>
                         <footer class="row">
-                            <h5 class="taxonomy"><i>in</i> <a href="#">这里是category</a></h5>
-                            <div class="response-count"><img src="" alt="这里是点赞图标">5</div>
+                            <h5 class="taxonomy"><i>in</i> <a href="#">category</a></h5>
+                            <div class="response-count"><img src="" alt="favor icon">5</div>
                         </footer>
                     </div>
                 </div>
