--- a/templates/rango/profile.html
+++ b/templates/rango/profile.html
@@ -1,6 +1,6 @@
 {% extends 'rango/base.html' %}
 {% load static %}
-
+<!--it is a template from webiste and i changed it although i filed-->
 {% block title_block %}
     Profile
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css'%}">
